# S21_content_factory

./: .dockerignore  .env.example  .gitignore  .mypy.ini  Dockerfile  README.md  alembic.ini  pyproject.toml  run.py  Паспорт программы_Технологический_предприниматель - ТЗ на продукт.csv
Content_generator_ver1/: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  alembic.ini  check_db_tables.py  install_pysqlite3_new.sh  pyproject.toml  pytest.ini  requirements.txt  run.py  thematic_blocks.json
Proverka/: .gitignore  CLAUDE.md  adjudication_sample.py  adjudication_score.py  adjudication_sheet.csv  llm_judge_matcher.py  llm_judge_prompts.json  make_report.py  prototype_aligner.py  prototype_markers.json  Отчёт_качество_аудитора.html
Spravochnik/: .gitignore  CLAUDE.md
deploy/: docker-compose.yml  env.production.sample  nginx-cf.conf
docs/: DEPLOY.md  MIGRATION_LOG.md  PHASE5_UI_MIGRATION_PLAN.md  deploy-pilot-checklist.md  project-contract-epic.md
evals/: generated_outputs.example.json  regeneration_outputs.example.json
legacy/proverka/: README.md  pyproject.toml  АНАЛИЗ_прогонов_и_решение.md
legacy/proverka/metrics/AP1_Go_T02.ID_1375360-master/AP1_Go_T02.ID_1375360-master/: README_RUS.md  TAGS_FILES.txt  check-list.yml
legacy/proverka/metrics/AP1_Jv_T04B.ID_1421426-master (1)/AP1_Jv_T04B.ID_1421426-master/: README.md  README_RUS.md  check-list.yml
legacy/proverka/metrics/AP1_Jv_T04B.ID_1421426-master (1)/AP1_Jv_T04B.ID_1421426-master/ci-scripts/: test.sh
legacy/proverka/metrics/BSA08_UseCase.ID_1361452-master/BSA08_UseCase.ID_1361452-master/: README.md
legacy/proverka/metrics/BSA13_RequirementsManagements.ID_1361460-master/BSA13_RequirementsManagements.ID_1361460-master/: check-list.yml
legacy/proverka/metrics/C2_SimpleBashUtils.ID_353513-master (1)/C2_SimpleBashUtils.ID_353513-master/: TAGS_FILES.txt  check-list.yml
legacy/proverka/metrics/C2_SimpleBashUtils.ID_353513-master (1)/C2_SimpleBashUtils.ID_353513-master/ci-scripts/: test.sh
legacy/proverka/metrics/C2_SimpleBashUtils.ID_353513-master (1)/C2_SimpleBashUtils.ID_353513-master/tests/s21_cat/alpine/: 1.out  4.args
legacy/proverka/metrics/C2_SimpleBashUtils.ID_353513-master (1)/C2_SimpleBashUtils.ID_353513-master/tests/s21_cat/mac/: 1.args  2.args  3.args
legacy/proverka/metrics/C2_SimpleBashUtils.ID_353513-master (1)/C2_SimpleBashUtils.ID_353513-master/tests/s21_cat/ubuntu/: 5.args  7.args  8.file
legacy/proverka/metrics/C2_SimpleBashUtils.ID_353513-master (1)/C2_SimpleBashUtils.ID_353513-master/tests/s21_grep/alpine/: 10.args  23_2.file  25.args
legacy/proverka/metrics/C2_SimpleBashUtils.ID_353513-master (1)/C2_SimpleBashUtils.ID_353513-master/tests/s21_grep/mac/: 18.args  20.out  22.args  24.out  25.out
legacy/proverka/metrics/C2_SimpleBashUtils.ID_353513-master (1)/C2_SimpleBashUtils.ID_353513-master/tests/s21_grep/ubuntu/: 24.args
legacy/proverka/metrics/CbS11_Enterprise_IT_landscape.ID_1573765-master/CbS11_Enterprise_IT_landscape.ID_1573765-master/: TAGS_FILES.txt
legacy/proverka/metrics/CbS11_Enterprise_IT_landscape.ID_1573765-master/CbS11_Enterprise_IT_landscape.ID_1573765-master/tests/task_1/: result_topology.drawio
legacy/proverka/metrics/CbS11_Enterprise_IT_landscape.ID_1573765-master/CbS11_Enterprise_IT_landscape.ID_1573765-master/tests/task_2/: my_inventory.xlsx
legacy/proverka/metrics/CbS4_Networking_basics_Part_4.ID_1521091-master/CbS4_Networking_basics_Part_4.ID_1521091-master/: check-list.yml
legacy/proverka/metrics/DSB2_Syntax_Semantics.ID_886511-master (1)/DSB2_Syntax_Semantics.ID_886511-master/: README_RUS.md  TAGS_FILES.txt
legacy/proverka/metrics/FEB1_JS.ID_883439-master/FEB1_JS.ID_883439-master/: TAGS_FILES.txt
legacy/proverka/metrics/SQLB11_Functions_and_procs.ID_574108-master (1)/SQLB11_Functions_and_procs.ID_574108-master/: README.md  check-list_RUS.yml
legacy/proverka/metrics/SQLB1_Basics.ID_574086-master (1)/SQLB1_Basics.ID_574086-master/: check-list.yml
legacy/proverka/metrics/atomic/: Проекты для теста_атомарные.xlsx
legacy/proverka/metrics/p01d06-id_239620-master (1)/p01d06-id_239620-master/: README.md
legacy/proverka/metrics/p01d06-id_239620-master (1)/p01d06-id_239620-master/tests/: cppcheck_test.py  tests.json
legacy/proverka/metrics/t03d03-id_239611-master (1)/t03d03-id_239611-master/: check-list.yml
legacy/proverka/metrics/t03d03-id_239611-master (1)/t03d03-id_239611-master/tests/: build.py  style_tests.py
legacy/proverka/metrics/t03d03-id_239611-master (1)/t03d03-id_239611-master/tests/Quest_1/: compile_file
legacy/proverka/metrics/t03d03-id_239611-master (1)/t03d03-id_239611-master/tests/Quest_2/: 3.out
legacy/proverka/metrics/t03d03-id_239611-master (1)/t03d03-id_239611-master/tests/Quest_3/: 6.out  compile_file
legacy/proverka/metrics/t03d03-id_239611-master (1)/t03d03-id_239611-master/tests/Quest_4/: 13.in
legacy/proverka/metrics/t03d03-id_239611-master (1)/t03d03-id_239611-master/tests/Quest_5/: 14.out
legacy/proverka/metrics/t03d03-id_239611-master (1)/t03d03-id_239611-master/tests/Quest_6/: compile_file
legacy/proverka/metrics/t03d03-id_239611-master (1)/t03d03-id_239611-master/tests/src/: arithmetic.c  crack.c  named_hello.c
legacy/proverka/metrics/t05d08-id_239624-master (1)/t05d08-id_239624-master/: check-list.yml  check-list_UZB.yml
legacy/proverka/metrics/t05d08-id_239624-master (1)/t05d08-id_239624-master/tests/: add_args.py  build.py  functional_tests.py  style_tests.sh
legacy/proverka/metrics/t05d08-id_239624-master (1)/t05d08-id_239624-master/tests/Quest_3/: 15.out  16.out  compile_file
legacy/proverka/metrics/t05d08-id_239624-master (1)/t05d08-id_239624-master/tests/Quest_4/: compile_file
legacy/proverka/metrics/t05d08-id_239624-master (1)/t05d08-id_239624-master/tests/solutions/: maxmin.c  search.c  squaring.c
legacy/proverka/report_quality_polza/: report.md
legacy/proverka/ТЗ/: Overview.html  Роудмап_ИИ-рефакторинг-контента (1).html
migrations/: env.py
scripts/: curriculum_contract_eval.py  deploy_catalog_pg.py  migrate_catalog_to_postgres.py  production_check.py  (+2 more)
(+1465 files in other folders)
