[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-factory"
version = "0.1.0"
description = "Unified School 21 content platform: generation, audit, and competency catalog."
requires-python = ">=3.12"
dependencies = [
    # --- generation / api (ex Content_generator_ver1) ---
    "pydantic[email]>=2.0.0",
    "openai>=1.0.0",
    "litellm>=1.83.14,<2.0",
    "instructor>=1.13.0,<2.0",
    "pydantic-ai>=1.0.5,<2.0",
    "opentelemetry-api>=1.28.0,<2.0",
    "langfuse>=3.0.0,<4.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.0.0",
    "requests>=2.31.0",
    "httpx>=0.23.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pypdf>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt,argon2]>=1.7.4",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    # --- catalog (ex Spravochnik) ---
    "rapidfuzz>=3.0",
    "networkx>=3.0",
    "python-docx>=1.0",
]

[project.optional-dependencies]
# Playwright visual E2E smoke (tests/e2e, opt-in via RUN_E2E=1). Install with
#   pip install -e ".[e2e]" && python -m playwright install chromium
e2e = ["pytest-playwright>=0.8"]
# Dev/CI tooling. ruff+mypy pinned exactly — they are gates, and a version bump can
# introduce new findings that fail CI. Install with: pip install -e ".[dev]"
dev = [
    "pytest>=9,<10",
    "ruff==0.15.20",
    "mypy==2.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
content_factory = [
    "config/*.yaml",
    "generation/config/*.yaml",
    "generation/config/**/*.yaml",
    "generation/prompts/**/*.md",
    "didactics/**/*",
    "audit/*.json",
    "audit/*.jpg",
    "audit/templates/**/*",
    "catalog/sql/*.sql",
    "catalog/viewer/templates/**/*",
    "catalog/viewer/static/**/*",
    "catalog/artifacts/*.json",
]

# ---------------------------------------------------------------------------
# Test / lint / type-check config (unified; ex Content_generator_ver1 pyproject)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --disable-warnings -p no:cacheprovider"
markers = [
    "unit: Unit тесты",
    "integration: Интеграционные тесты",
    "slow: Медленные тесты (требуют LLM API)",
    "asyncio: Асинхронные тесты",
    "e2e: Playwright visual end-to-end (needs live server + Postgres; opt-in via RUN_E2E=1)",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai.*", "slowapi.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
# UP047: PEP 695 generic syntax (def f[T]) trips mypy 2.1.0's syntax check even at
# python_version 3.12 — keep explicit TypeVar generics.
# UP017: standardize on the portable `timezone.utc` spelling rather than the
# 3.11+ `datetime.UTC` alias; keeps one idiom across the codebase.
ignore = ["E501", "B008", "C901", "UP047", "UP017"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# generation.py deliberately re-exports helpers (import X as _X) so tests can
# patch them as module attributes; those reads are invisible to ruff.
"src/content_factory/api/routers/generation.py" = ["F401", "E402"]
# These modules set up a module logger / constants before their internal
# imports (organic ordering); reordering has no functional benefit.
"src/content_factory/generation/orchestrator.py" = ["E402"]
"src/content_factory/catalog/viewer/app.py" = ["E402"]

[tool.black]
line-length = 120
target-version = ['py312']
extend-exclude = '''
/(
  \.eggs | \.git | \.hg | \.mypy_cache | \.tox | \.venv | venv
  | _build | buck-out | build | dist | migrations | legacy
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = ["migrations", ".venv", "venv", "legacy"]
