[project]
name = "content-audit"
version = "0.1.0"
description = "Инструмент аудита учебного контента по локальной папке проекта."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "openpyxl>=3.1",
]

[project.scripts]
audit-content = "content_audit.cli:main"
audit-content-ui = "content_audit.web_app:main"
audit-metrics-eval = "content_audit.metrics_eval_cli:main"
audit-adjudication = "content_audit.adjudication_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
